--- a/assets/javascripts/discourse/templates/modal/curation-form.hbs
+++ b/assets/javascripts/discourse/templates/modal/curation-form.hbs
@@ -1,3 +1,11 @@
-{{#d-modal-body class="select-thumbnail" title=modal_title}}
-  <h3>{{siteSettings.topic_curation_form_title}}</h3>
+{{#d-modal-body class="select-tags" title=modal_title}}
+  {{#each tag_groups_data.tag_groups as |tag_group|}}
+    <h4>{{tag_group.name}}</h4>
+    {{#if selected_group_names}}
+	    {{#each selected_group_names as |group|}}
+			{{tag_group.tag_names}}<br/>
+	  	{{/each}}
+  	{{/if}}
+  {{/each}}
+    
 {{/d-modal-body}}
