if condition commented. custom button will be visible to all logged in users

--- a/assets/javascripts/discourse/templates/connectors/composer-fields/custom-public-button.hbs
+++ b/assets/javascripts/discourse/templates/connectors/composer-fields/custom-public-button.hbs
@@ -1,6 +1,6 @@
-{{#if currentUser.can_see_topic_group_button}}
+{{!--{{#if currentUser.can_see_topic_group_button}}--}}
   <button
     class="btn topic-group-button"
     title={{siteSettings.topic_curation_title}}
     {{action "clickButton"}}>{{siteSettings.topic_curation_label}}</button>
-{{/if}}
+{{!--{{/if}}--}}
