--- a/assets/javascripts/discourse/templates/modal/curation-form.hbs
+++ b/assets/javascripts/discourse/templates/modal/curation-form.hbs
@@ -9,5 +9,6 @@
 	  	{{/if}}
   	--}}
   	{{custom_helper_to_render_tag_groups tag_group selected_group_names=selected_group_names}}
-  {{/each}}    
+  {{/each}}
+  {{d-button class="btn btn-primary" action="SelectedGroupsTags" label="curation_form.submit_button_label"}}
 {{/d-modal-body}}
