--- a/assets/javascripts/discourse/templates/modal/curation-form.hbs
+++ b/assets/javascripts/discourse/templates/modal/curation-form.hbs
@@ -12,6 +12,17 @@
   	{{custom_helper_to_render_tag_groups tag_group selected_group_names=selected_group_names}}
   	</span>
   {{/each}}
+  <h4>Keywords</h4>
+                    {{mini-tag-chooser
+                      value=model.tags
+                      tabindex=4
+                      isDisabled=disableTagsChooser
+                      onChange=(action (mut model.tags))
+                      options=(hash
+                        categoryId=model.categoryId
+                        minimum=model.minimumRequiredTags
+                      )
+                    }}
   {{d-button class="btn" action="SelectedGroupsTags" label="curation_form.submit_button_label"}}
   
 {{/d-modal-body}}
