--- a/assets/javascripts/discourse/templates/connectors/composer-fields/custom-public-button.hbs
+++ b/assets/javascripts/discourse/templates/connectors/composer-fields/custom-public-button.hbs
@@ -1,6 +1,8 @@
 {{!--{{#if currentUser.can_see_topic_group_button}}--}}
+<div>
   <button
     class="btn btn-primary topic-group-button"
     title={{siteSettings.topic_curation_title}}
     {{action "clickButton"}}>{{siteSettings.topic_curation_label}}</button>
+</div>
 {{!--{{/if}}--}}
