if else condition added

--- a/assets/javascripts/discourse/templates/connectors/composer-tag-fields/show-selected-tags.hbs
+++ b/assets/javascripts/discourse/templates/connectors/composer-tag-fields/show-selected-tags.hbs
@@ -1,1 +1,7 @@
-<div id="show_selected_tags"></div>
+<div id="show_selected_tags">
+{{#if model.tags}}
+	{{model.tags}}
+{{else}}
+
+{{/if}}
+</div>
