action added to the cancel button and cancel_button_label variable added in the client.en.yml

--- a/assets/javascripts/discourse/templates/modal/curation-form.hbs
+++ b/assets/javascripts/discourse/templates/modal/curation-form.hbs
@@ -24,5 +24,6 @@
                       )
                     }}
   {{d-button class="btn" action="SelectedGroupsTags" label="curation_form.submit_button_label"}}
+  {{d-button class="btn" action=(route-action "closeModal") label="curation_form.cancel_button_label" title="modal.close"}}
   
 {{/d-modal-body}}
