show_selected_tags variable added

--- a/assets/javascripts/discourse/templates/modal/curation-form.hbs
+++ b/assets/javascripts/discourse/templates/modal/curation-form.hbs
@@ -9,7 +9,7 @@
 		  	{{/each}}
 	  	{{/if}}
   	--}}
-  	{{custom_helper_to_render_tag_groups tag_group selected_group_names=selected_group_names}}
+  	{{custom_helper_to_render_tag_groups tag_group selected_group_names show_selected_tags=show_selected_tags}}
   	</span>
   {{/each}}
   <h4>Keywords</h4>
