--- a/assets/javascripts/discourse/templates/modal/curation-form.hbs
+++ b/assets/javascripts/discourse/templates/modal/curation-form.hbs
@@ -13,18 +13,18 @@
   	</span>
   {{/each}}
   <h4>Keywords</h4>
-                    {{mini-tag-chooser
-                      value=model.tags
-                      tabindex=4
-                      isDisabled=disableTagsChooser
-                      onChange=(action (mut model.tags))
-                      options=(hash
-                        categoryId=model.categoryId
-                        minimum=model.minimumRequiredTags
-                      )
-                    }}
+    {{mini-tag-chooser
+      value=model.tags
+      tabindex=4
+      isDisabled=disableTagsChooser
+      onChange=(action (mut model.tags))
+      options=(hash
+        categoryId=model.categoryId
+        minimum=model.minimumRequiredTags
+      )
+    }}
   <br/>                  
-  {{d-button class="btn" action="SelectedGroupsTags" label="curation_form.submit_button_label"}}
+  {{d-button class="btn" action=(action "SelectedGroupsTags" model.tags) label="curation_form.submit_button_label"}}
   {{d-button class="btn" action=(route-action "closeModal") label="curation_form.cancel_button_label" title="modal.close"}}
   
 {{/d-modal-body}}
