Css added for modal form buttons

--- a/assets/javascripts/discourse/templates/modal/curation-form.hbs
+++ b/assets/javascripts/discourse/templates/modal/curation-form.hbs
@@ -23,8 +23,8 @@
         minimum=model.minimumRequiredTags
       )
     }}
-  <br/>                  
-  {{d-button class="btn" action=(action "SelectedGroupsTags" model.tags) label="curation_form.submit_button_label"}}
+  <hr/>                  
+  {{d-button class="btn modal-button" action=(action "SelectedGroupsTags" model.tags) label="curation_form.submit_button_label"}}
   {{d-button class="btn" action=(route-action "closeModal") label="curation_form.cancel_button_label" title="modal.close"}}
   
 {{/d-modal-body}}
