--- a/assets/javascripts/discourse/templates/modal/curation-form.hbs
+++ b/assets/javascripts/discourse/templates/modal/curation-form.hbs
@@ -1,17 +1,26 @@
 {{#d-modal-body class="select-tags" title=modal_title}}
-  {{#each tag_groups_data.tag_groups as |tag_group|}}  
+
+  {{#each tag_groups_data as |tag_group|}}
   <span class="custom-tag-group">
     <h4>{{tag_group.name}}</h4>
-    {{!--
-	    {{#if selected_group_names}}
-		    {{#each selected_group_names as |group|}}
-				{{tag_group.tag_names}}<br/>
-		  	{{/each}}
-	  	{{/if}}
-  	--}}
-  	{{custom_helper_to_render_tag_groups tag_group selected_group_names show_selected_tags=show_selected_tags}}
-  	</span>
+  	{{custom_helper_to_render_tag_groups tag_group selected_group_names show_selected_tags class_name="selected-tags-in-curation-form"}}
+  </span>
   {{/each}}
+
+  {{#each tag_groups_to_render_textboxes as |tag_group|}}
+  <span class="custom-tag-group autocomplete_text">
+    
+    <h4>{{tag_group.name}}</h4>
+    {{!--{{custom_helper_to_render_tag_groups tag_group selected_group_names show_selected_tags class_name="hided_tags_on_curation_form"}}--}}
+
+    {{!--{{custom_helper_to_render_textboxes tag_group}}--}}
+    
+      {{input id=tag_group.name type='text' class="selected-tags-in-curation-form" name=tag_group.name placeholder="Search for tags" input=(action "SearchText" tag_group) }}
+      {{!--<input id={{tag_group.name}} type="text" value=input_text placeholder={{tag_group.name}} onchange={{action "SearchText"}}>--}}
+    
+    </span>
+  {{/each}}
+
   <h4>Keywords</h4>
     {{mini-tag-chooser
       value=model.tags
