--- a/assets/stylesheets/custom_public_button.css
+++ b/assets/stylesheets/custom_public_button.css
@@ -34,3 +34,15 @@
 	margin-top: 2px;
 	margin-bottom: 10px;
 }
+
+ .tag-class-selected{
+ 	list-style-type:none;
+ 	display: inline-block;
+background: rgba(255,255,255,0.1) none repeat scroll 0% 0%;
+    border-radius: 4px;
+    border: 1px solid #dcd8d5f7;
+    padding-top: 0.2px;
+    padding-right: 4px;
+    padding-bottom: 0.2px;
+    padding-left: 4px;
+ }   
