--- a/assets/stylesheets/custom_public_button.css
+++ b/assets/stylesheets/custom_public_button.css
@@ -78,3 +78,24 @@ input[type=submit] {
   color: #ffffff;
 }
 * { box-sizing: border-box; }
+
+.modal-button{
+  margin-top: 2px;
+  margin-bottom: 10px;
+}
+
+.comma-color{
+  color:#f4f2f2;
+}
+
+ .tag-class-selected{
+  list-style-type:none;
+  display: inline-block;
+  background: rgba(255,255,255,0.1) none repeat scroll 0% 0%;
+    border-radius: 4px;
+    border: 1px solid #dcd8d5f7;
+    padding-top: 0.2px;
+    padding-right: 4px;
+    padding-bottom: 0.2px;
+    padding-left: 4px;
+ } 
