--- a/assets/javascripts/discourse/templates/modal/curation-form.hbs
+++ b/assets/javascripts/discourse/templates/modal/curation-form.hbs
@@ -35,7 +35,7 @@
 
   <hr/>                  
 
-  {{d-button class="btn modal-button" action=(action "SelectedGroupsTags" model.tags) label="curation_form.submit_button_label"}}
-  {{d-button class="btn" action=(route-action "closeModal") label="curation_form.cancel_button_label" title="modal.close"}}
+  {{d-button class="btn btn-primary modal-button" action=(action "SelectedGroupsTags" model.tags) label="curation_form.submit_button_label"}}
+  {{d-button class="btn btn-danger" action=(route-action "closeModal") label="curation_form.cancel_button_label" title="modal.close"}}
   
 {{/d-modal-body}}
